--- a/Crocodile/Screens/GameScreen/GameScreen.storyboard
+++ b/Crocodile/Screens/GameScreen/GameScreen.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,38 +22,6 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain"/>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M9V-Ta-UWb" userLabel="TimerAndWordView">
-                                <rect key="frame" x="43" y="139.66666666666663" width="344" height="466"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Слово" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Hb-8m-iah">
-                                        <rect key="frame" x="147.33333333333334" y="362.33333333333337" width="49.333333333333343" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Изобразите слово " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dwq-Yt-6OT">
-                                        <rect key="frame" x="96.666666666666657" y="409" width="151" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Показывает игрок" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I73-vl-UQu">
-                                        <rect key="frame" x="99.333333333333357" y="222.66666666666666" width="145.66666666666663" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstItem="Dwq-Yt-6OT" firstAttribute="centerY" secondItem="M9V-Ta-UWb" secondAttribute="centerY" multiplier="1.8" id="4d7-s8-k8O"/>
-                                    <constraint firstItem="I73-vl-UQu" firstAttribute="centerX" secondItem="M9V-Ta-UWb" secondAttribute="centerX" id="F3j-cG-e2t"/>
-                                    <constraint firstItem="I73-vl-UQu" firstAttribute="centerY" secondItem="M9V-Ta-UWb" secondAttribute="centerY" id="WYk-WG-fLi"/>
-                                    <constraint firstItem="2Hb-8m-iah" firstAttribute="centerY" secondItem="M9V-Ta-UWb" secondAttribute="centerY" multiplier="1.6" id="faK-Bh-dYd"/>
-                                    <constraint firstItem="Dwq-Yt-6OT" firstAttribute="centerX" secondItem="M9V-Ta-UWb" secondAttribute="centerX" id="sAF-6c-8t7"/>
-                                    <constraint firstItem="2Hb-8m-iah" firstAttribute="centerX" secondItem="M9V-Ta-UWb" secondAttribute="centerX" id="tai-1e-xd7"/>
-                                </constraints>
-                            </view>
                             <button hidden="YES" opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KUW-jy-k5A">
                                 <rect key="frame" x="43" y="613.66666666666663" width="90" height="35"/>
                                 <color key="backgroundColor" red="0.85098039219999999" green="0.61176470589999998" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -64,6 +31,48 @@
                                     <action selector="giveUpButtonAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="mTh-uB-seT"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M9V-Ta-UWb" userLabel="TimerAndWordView">
+                                <rect key="frame" x="43" y="139.66666666666663" width="344" height="466"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Слово" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Hb-8m-iah">
+                                        <rect key="frame" x="147.33333333333334" y="397.33333333333337" width="49.333333333333343" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Показывает игрок" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I73-vl-UQu">
+                                        <rect key="frame" x="99.333333333333357" y="281" width="145.66666666666663" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jnv-9y-ebh">
+                                        <rect key="frame" x="0.0" y="0.0" width="344" height="233"/>
+                                        <connections>
+                                            <segue destination="vg4-BW-Spd" kind="embed" identifier="toTimerChild" id="aIQ-xn-oTR"/>
+                                        </connections>
+                                    </containerView>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Изобразите слово " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dwq-Yt-6OT">
+                                        <rect key="frame" x="96.666666666666657" y="339" width="151" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Dwq-Yt-6OT" firstAttribute="centerY" secondItem="M9V-Ta-UWb" secondAttribute="centerY" multiplier="1.5" id="4d7-s8-k8O"/>
+                                    <constraint firstItem="Jnv-9y-ebh" firstAttribute="leading" secondItem="M9V-Ta-UWb" secondAttribute="leading" id="8DH-Lo-Niz"/>
+                                    <constraint firstItem="Jnv-9y-ebh" firstAttribute="height" secondItem="M9V-Ta-UWb" secondAttribute="height" multiplier="0.5" id="8v5-zu-wIS"/>
+                                    <constraint firstItem="I73-vl-UQu" firstAttribute="centerX" secondItem="M9V-Ta-UWb" secondAttribute="centerX" id="OGC-16-9G9"/>
+                                    <constraint firstItem="I73-vl-UQu" firstAttribute="centerY" secondItem="M9V-Ta-UWb" secondAttribute="centerY" multiplier="1.25" id="bja-pE-UOx"/>
+                                    <constraint firstItem="2Hb-8m-iah" firstAttribute="centerY" secondItem="M9V-Ta-UWb" secondAttribute="centerY" multiplier="1.75" id="faK-Bh-dYd"/>
+                                    <constraint firstItem="Dwq-Yt-6OT" firstAttribute="centerX" secondItem="M9V-Ta-UWb" secondAttribute="centerX" id="sAF-6c-8t7"/>
+                                    <constraint firstAttribute="trailing" secondItem="Jnv-9y-ebh" secondAttribute="trailing" id="sEW-ZE-mgd"/>
+                                    <constraint firstItem="2Hb-8m-iah" firstAttribute="centerX" secondItem="M9V-Ta-UWb" secondAttribute="centerX" id="tai-1e-xd7"/>
+                                    <constraint firstItem="Jnv-9y-ebh" firstAttribute="top" secondItem="M9V-Ta-UWb" secondAttribute="top" id="z5P-HG-dZr"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.0" green="0.87450980392156863" blue="0.031372549019607843" alpha="1" colorSpace="deviceRGB"/>
@@ -86,6 +95,7 @@
                         <outlet property="giveUpButton" destination="KUW-jy-k5A" id="Ly0-hM-jQ1"/>
                         <outlet property="mainButton" destination="aL9-Og-PVi" id="AaF-Wh-8r9"/>
                         <outlet property="showingPlayerLabel" destination="I73-vl-UQu" id="We6-iM-3Fe"/>
+                        <outlet property="timerContainerView" destination="Jnv-9y-ebh" id="T3j-Su-I3Z"/>
                         <outlet property="wordLabel" destination="2Hb-8m-iah" id="ZnU-xC-bvE"/>
                     </connections>
                 </viewController>
@@ -111,15 +121,39 @@
             </objects>
             <point key="canvasLocation" x="55.725190839694655" y="-27.464788732394368"/>
         </scene>
+        <!--Timer Container View Game Screen View Controller-->
+        <scene sceneID="syp-FD-Vhg">
+            <objects>
+                <viewController id="vg4-BW-Spd" customClass="TimerContainerViewGameScreenViewController" customModule="Crocodile" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HIX-rG-XVf">
+                        <rect key="frame" x="0.0" y="0.0" width="344" height="233"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TimeLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rhc-Lg-i32">
+                                <rect key="frame" x="132.66666666666666" y="106" width="79" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="rhc-Lg-i32" firstAttribute="centerY" secondItem="HIX-rG-XVf" secondAttribute="centerY" id="j7x-g5-ZpM"/>
+                            <constraint firstItem="rhc-Lg-i32" firstAttribute="centerX" secondItem="HIX-rG-XVf" secondAttribute="centerX" id="tmj-ho-zpd"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="timeLabel" destination="rhc-Lg-i32" id="gWY-f4-Hsf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L6D-HO-iXu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1786.7441860465117" y="-165.12875536480686"/>
+        </scene>
     </scenes>
     <designables>
         <designable name="aL9-Og-PVi">
             <size key="intrinsicContentSize" width="24" height="14"/>
         </designable>
     </designables>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
